c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/assignment_in_initializer.c
int main(void) {
    int a;
    int b = a = 0;
    return b;
}