c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_parse/extra_credit/increment_declaration.c
int main(void) {
    int a++;
    return 0;
}